[package]
name = "RUSTRUSTRUST"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The only crate to sieve the false ones out"

[dependencies]
once_cell = "1.19.0"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
syn = { version = "2.0.57", features = ["full"] }
toml = "0.8.12"
url = "2.5.0"
username = "0.2.0"
